Performance changes, and added american ancestor url, and more...

--- a/Web.UI/Content/css/dialog.css
+++ b/Web.UI/Content/css/dialog.css
@@ -230,6 +230,11 @@ hr {
     height: 423px;
 }
 
+.findClues-table {
+    margin-top: -1.4em;
+    height: 423px;
+}
+
 /*Rounded and Circle Classes
 ------------------------------------*/
 .rounded { border-radius: 4px !important;}
