--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -1,9 +1,9 @@
 <div class ="findClues-table">
-    <table id="findCluesTable"
+    <table id="findCluesReportTable"
            data-toggle="table"
            data-height="800"
-           data-pageSize="50"
-           data-pageList="[10, 25, 50, 100, 200]"
+           data-pagesize="50"
+           data-pagelist="[10, 25, 50, 100, 200]"
            data-pagination="true"
            data-search="false"
            data-show-refresh="false"
