--- a/Web.UI/Views/Research/FindPersonOptions.cshtml
+++ b/Web.UI/Views/Research/FindPersonOptions.cshtml
@@ -45,6 +45,24 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <div class="col-sm-12">
+                <div class="input-group">
+                    <select class="form-control" id="findPersonOptions6">
+                        <option value="0">Select</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12">
+                <div class="input-group">
+                    <select class="form-control" id="findPersonOptions7">
+                        <option value="0">Select</option>
+                    </select>
+                </div>
+            </div>
+        </div>
         <hr/>
         <div class="row" >
             <div class="text-center">
