making the dialogs work and minor ui changes

--- a/Web.UI/Content/css/style.css
+++ b/Web.UI/Content/css/style.css
@@ -126,7 +126,7 @@ a.btn-u-lg {
 /*Main Styles
 ------------------------------------*/
 .ls-bar-timer {
-    top: 496px !important;
+    top: 99.3% !important;
 }
 /*Purchase Block*/
 .purchase {
