--- a/Web.UI/Views/Research/Hints.cshtml
+++ b/Web.UI/Views/Research/Hints.cshtml
@@ -46,7 +46,7 @@
             <div class="col-sm-10">
                 <div class="input-group">
                     <div class="radio">
-                        <label><input type="radio" id="hintsTopScore" name="optradio" checked="checked">Top Score</label>&nbsp;&nbsp;
+                        <label><input type="radio" id="hintsTopScore" name="optradio">Top Score</label>&nbsp;&nbsp;
                         <label><input type="radio" id="hintsCount" name="optradio">Count</label>
                     </div>
                 </div>
