--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -10,8 +10,7 @@
 <div class="tp-banner-container">
 
     <div id="layerslider" style="width: 1280px; height: 500px !important; max-width: 1280px;">
-        <div class="ls-slide" data-ls="slidedelay:5500;transition2d:11;">
-            <img src="/Images/bg2.jpg" class="ls-bg" alt="Slide background" style="margin-top: 0px !important; height: 500px !important;" />
+        <div class="ls-slide fmf-bg2" data-ls="slidedelay:5500;transition2d:11;">
             <img class="ls-l" style="top: 57%; left: 69%; width: 525.5px; height: 605px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:300;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/findmyfamilies_new1.png" alt="">
@@ -28,8 +27,7 @@
             </div>
 
         </div>
-        <div class="ls-slide" data-ls="slidedelay:5500;transition2d:11;">
-            <img src="/Images/bg5.jpg" class="ls-bg" alt="Slide background" />
+        <div class="ls-slide fmf-bg5" data-ls="slidedelay:5500;transition2d:11;">
             <img class="ls-l" style="top: 46%; left: 74%; width: 650px; height: 390px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:390;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/Computer2.png" alt="">
@@ -49,8 +47,7 @@
                 <a class="btn-u btn-u-blue btn-u-lg" href="@Url.Action("SearchAncestry", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
             </div>
         </div>
-        <div class="ls-slide" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
-            <img src="/Images/img1.jpg" class="ls-bg" alt="Slide background" />
+        <div class="ls-slide fmf-img1" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
 
             <div class="ls-l" style="top: 60px; left: 50%; background: white; background: rgba(255, 255, 255, .2); box-shadow: 0px 5px 70px -20px black; width: 660px; height: 380px; white-space: nowrap;" data-ls="offsetxin:0;durationin:2000;delayin:1500;easingin:easeInOutExpo;rotatexin:20;scalexin:0.8;scaleyin:0.8;transformoriginin:50% 50% -150;offsetxout:0;durationout:1000;rotatexout:-20;scalexout:0.8;scaleyout:0.8;transformoriginout:50% 50% -150;">
             </div>
