--- a/Web.UI/Views/Research/IncompleteOrdinances.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinances.cshtml
@@ -1,4 +1,4 @@
-<div class="panel-body">
+<div class="panel-body">                                                      
     <form class="form-horizontal" role="form">
         <div class="form-group">
             <label for="incompleteOrdinancesReportId" class="col-sm-2 control-label">Retrieved:</label>
@@ -33,18 +33,20 @@
                 </div>
             </div>
         </div>
+
         <div class="form-group">
-            <label for="incompleteOrdinancesGeneration" class="col-sm-2 control-label">Generations:</label>
+            <label for="incompleteOrdinancesGenerationDiv" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
                 <div class="input-group">
                     <div id="incompleteOrdinancesGenerationDiv"></div>
                 </div>
             </div>
         </div>
+
         <hr/>
         <div class="row" >
             <div class="text-center">
-                <button id="incompleteOrdinancesSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Incomplete Ordinances</button>
+                <button id="incompleteOrdinancesSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Incomplete Odinances</button>
                 <button type='button' id="incompleteOrdinancesPreviousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
                 <button type='button' id="incompleteOrdinancesResetButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-reset24 dialog-buttons"></i> Reset</button>
                 <button type='button' id="incompleteOrdinancesHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
@@ -53,7 +55,7 @@
         </div>
     </form>
 </div>
-<div id="retrieveSpinner"/>
+<div id="incompleteOrdinancesSpinner"/>
 
 <script type="text/javascript">require(['main'], function (main) { require(['incompleteOrdinancesController']); });</script>
 
