--- a/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
@@ -1,45 +1,43 @@
-﻿<link rel="stylesheet" href="~/Views/Home/Research/bootstrap-table.min.css">
-
-<div>
-    <table id="ordinancesTable"
+﻿<div class ="incompleteOrdinances-table">
+    <table id="incompleteOrdinancesReportTable"
            data-toggle="table"
-           data-height="600"
-           data-pageSize="50"
-           data-pageList="[10, 25, 50, 100, 200]"
+           data-height="800"
+           data-pagesize="50"
+           data-pagelist="[10, 25, 50, 100, 200]"
            data-pagination="true"
-           data-search="true"
+           data-search="false"
            data-show-refresh="false"
-           data-show-toggle="true"
-           data-show-columns="true"
+           data-show-toggle="false"
+           data-show-columns="false"
            data-toolbar="#toolbar"
            data-click-to-select="false"
            data-single-select="false">
         <thead>
             <tr>
-                <th data-field="Name" data-formatter="nameFormatter">Name</th>
-                <th data-field="Baptism" data-formatter="ordinanceFormatter">Baptism</th>
-                <th data-field="Confirmation" data-formatter="ordinanceFormatter">Confirmation</th>
-                <th data-field="Initiatory" data-formatter="ordinanceFormatter">Initiatory</th>
-                <th data-field="Endowment" data-formatter="ordinanceFormatter">Endowment</th>
-                <th data-field="SealedToParent" data-formatter="ordinanceFormatter">Sealed To Parent</th>
-                <th data-field="SealedToSpouse" data-formatter="ordinanceFormatter">Sealed To Spouse</th>
+                <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents">Name</th>
+                <th data-field="Baptism" data-formatter="baptismFormatter">Baptism</th>
+                <th data-field="Confirmation" data-formatter="confirmationFormatter">Confirmation</th>
+                <th data-field="Initiatory" data-formatter="initiatoryFormatter">Initiatory</th>
+                <th data-field="Endowment" data-formatter="endowmentFormatter">Endowment</th>
+                <th data-field="SealedToParent" data-formatter="sealedToParentFormatter">Sealed To Parent</th>
+                <th data-field="SealedToSpouse" data-formatter="sealedToSpouseFormatter">Sealed To Spouse</th>
             </tr>
         </thead>
     </table>
+    <br />
 </div>
-<div id="incompleteOrdinancesSpinner" style="position: fixed; top: 50%; left: 50%"></div>
 
-<script type="text/javascript" src="~/Views/Home/Research/bootstrap-table.min.js"></script>
-
-<script type="text/javascript">
-    $(function () {
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "/Views/Home/Research/IncompleteOrdinances/IncompleteOrdinancesReport.js";
-        document.head.appendChild(scriptTag);
-    });
-</script>
+<div class="row">
+<div class="text-center">
+    <button id="incompleteOrdinancesReportSaveButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class ="fa fmf-save24 dialog-buttons"></i> Save </button>
+    <button type='button' id="incompleteOrdinancesReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options </button>
+    <button type='button' id="incompleteOrdinancesReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help </button>
+    <button type='button' id="incompleteOrdinancesReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close </button>
+</div>
+</div>
 
 
-@*<script type="text/javascript" src="~/Views/Home/Research/IncompleteOrdinances/IncompleteOrdinances.js"></script>*@
+<div id="incompleteOrdinancesReportSpinner" />
 
-
+<script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
+<script type="text/javascript">require(['main'], function (main) { require(['incompleteOrdinancesReportController']); });</script>
