--- a/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
@@ -1,22 +1,20 @@
-﻿<link rel="stylesheet" href ="~/Views/Home/Research/bootstrap-table.min.css">
-
-<div>
-    <table id="possibleDuplicatesTable"
+﻿<div class ="possibleDuplicates-table">
+    <table id="possibleDuplicatesReportTable"
            data-toggle="table"
-           data-height="600"
-           data-pageSize="50"
-           data-pageList="[10, 25, 50, 100, 200]"
+           data-height="800"
+           data-pagesize="50"
+           data-pagelist="[10, 25, 50, 100, 200]"
            data-pagination="true"
-           data-search="true"
+           data-search="false"
            data-show-refresh="false"
-           data-show-toggle="true"
-           data-show-columns="true"
+           data-show-toggle="false"
+           data-show-columns="false"
            data-toolbar="#toolbar"
            data-click-to-select="false"
            data-single-select="false">
         <thead>
             <tr>
-                <th data-field="Name" data-formatter="nameFormatter">Name</th>
+                <th data-field="Name" data-formatter="nameFormatter" data-events="nameEvents">Name</th>
                 <th data-field="Link" data-formatter="linkFormatter">Link</th>
                 <th data-field="Title">Title</th>
                 <th data-field="Results">Results</th>
@@ -24,18 +22,20 @@
             </tr>
         </thead>
     </table>
+    <br />
 </div>
-<div id="possibleDuplicatesSpinner" style="position: fixed; top: 50%; left: 50%"></div>
 
-<script type="text/javascript" src="~/Views/Home/Research/bootstrap-table.min.js"></script>
-
-<script type="text/javascript">
-    $(function () {
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "Views/Home/Research/PossibleDuplicates/PossibleDuplicatesReport.js";
-        document.head.appendChild(scriptTag);
-    });
-</script>
+<div class="row">
+<div class="text-center">
+    <button id="possibleDuplicatesReportSaveButton" class ="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class ="fa fmf-save24 dialog-buttons"></i> Save </button>
+    <button type='button' id="possibleDuplicatesReportOptionsButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-options24 dialog-buttons"></i> Options </button>
+    <button type='button' id="possibleDuplicatesReportHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help </button>
+    <button type='button' id="possibleDuplicatesReportCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close </button>
+</div>
+</div>
 
 
-@*<script type="text/javascript" src ="~/Views/Home/Research/PossibleDuplicates/PossibleDuplicatesReport.js"></script>*@
+<div id="possibleDuplicatesReportSpinner" />
+
+<script type="text/javascript" src="~/Content/js/vendor/bootstrap-table.min.js"></script>
+<script type="text/javascript">require(['main'], function (main) { require(['possibleDuplicatesReportController']); });</script>
