--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -9,8 +9,8 @@
 
 <div class="tp-banner-container">
 
-    <div id="layerslider" style="width: 1280px; height: 500px !important; max-width: 1280px;">
-        <div class="ls-slide fmf-bg2" data-ls="slidedelay:5500;transition2d:11;">
+    <div id="layerslider" style="width: 1281px; height: 547px !important; max-width: 1281px;">
+        <div class="ls-slide fmf-bg2" style="width: 117px !important" data-ls="slidedelay:5500;transition2d:11;">
             <img class="ls-l" style="top: 57%; left: 69%; width: 525.5px; height: 605px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:300;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/findmyfamilies_new1.png" alt="">
