--- a/Web.UI/Views/Research/DateProblems.cshtml
+++ b/Web.UI/Views/Research/DateProblems.cshtml
@@ -36,7 +36,7 @@
         <div class="form-group">
             <label for="dateProblemsGeneration" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
-                <div class="input-group">
+                <div class="input-group addChildren-box">
                     <div id="dateProblemsGenerationDiv"></div>
                 </div>
             </div>
