--- a/Web.UI/Views/Research/IncompleteOrdinances.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinances.cshtml
@@ -37,7 +37,7 @@
         <div class="form-group">
             <label for="incompleteOrdinancesGenerationDiv" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
-                <div class="input-group">
+                <div class="input-group addChildren-box">
                     <div id="incompleteOrdinancesGenerationDiv"></div>
                 </div>
             </div>
