--- a/Web.UI/Views/Research/PlaceProblems.cshtml
+++ b/Web.UI/Views/Research/PlaceProblems.cshtml
@@ -1,57 +1,64 @@
 <div class="panel-body">                                                      
     <form class="form-horizontal" role="form">
         <div class="form-group">
-            <label for="placesReportId" class="col-sm-2 control-label">Retrieved:</label>
+            <label for="placeProblemsReportId" class="col-sm-2 control-label">Retrieved:</label>
             <div class="col-sm-10">
                 <div class="input-group">
-                    <select class="form-control" id="placesReportId">
+                    <select class="form-control" id="placeProblemsReportId">
                         <option value="0">Select</option>
                     </select>
                     <span class="input-group-btn">
-                        <button id="placesRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-retrieve" style="font-size:22px; margin-top: -0.24em; margin-bottom: -.1em; vertical-align: middle"></i> Retrieve</button>
+                        <button id="placeProblemsRetrieveButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-retrieve24 dialog-buttons btn-retrieve-find"></i> Retrieve</button>
                     </span>
                 </div>
             </div>
         </div>
         <div class="form-group">
-            <label for="placesResearchType" class="col-sm-2 control-label">Research:</label>
-            <div class="col-sm-10">
-                <select class="form-control researchType" id="placesResearchType">
+            <label for="placeProblemsResearchType" class="col-sm-2 control-label">Research:</label>
+            <div class="col-sm-3">
+                <select class="form-control researchType" id="placeProblemsResearchType">
                     <option>Ancestors</option>
                     <option>Descendants</option>
                 </select>
             </div>
         </div>
         <div class="form-group">
-            <label for="placesPersonId" class="col-sm-2 control-label">Name:</label>
+            <label for="placeProblemsPersonId" class="col-sm-2 control-label">Name:</label>
             <div class="col-sm-7">
                 <div class="input-group">
-                    <input id="placesPersonId" type="text" class="form-control" disabled>
+                    <select class="form-control" id="placeProblemsPersonId"></select>
                     <span class="input-group-btn">
-                            <button id="retrieveFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fmf24-Search" style =" font-size: 22px; vertical-align: middle; margin-top : -0.24em"></i> Find</button>
-	                    </span>
+                        <button id="placeProblemsFindPersonButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-search24 dialog-buttons btn-retrieve-find"></i> Find</button>
+                    </span>
                 </div>
             </div>
         </div>
 
         <div class="form-group">
-            <label for="placesGeneration" class="col-sm-2 control-label">Generations:</label>
+            <label for="placeProblemsGenerationDiv" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
-                <div class="input-group">
-                    <div id="placesGenerationDiv"></div>
+                <div class="input-group addChildren-box">
+                    <div id="placeProblemsGenerationDiv"></div>
                 </div>
+            </div>
+        </div>
+
+        <hr/>
+        <div class="row" >
+            <div class="text-center">
+                <button id="placeProblemsSubmitButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-green" data-style="expand-left"><i class="fa fmf-submit24 dialog-buttons"></i> Place Problems</button>
+                <button type='button' id="placeProblemsPreviousButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-previous24 dialog-buttons"></i> Previous</button>
+                <button type='button' id="placeProblemsResetButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-reset24 dialog-buttons"></i> Reset</button>
+                <button type='button' id="placeProblemsHelpButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-help24 dialog-buttons"></i> Help</button>
+                <button type='button' id="placeProblemsCloseButton" class="btn-u btn-brd btn-brd-hover rounded btn-u-blue" data-style="expand-left"><i class="fa fmf-close24 dialog-buttons"></i> Close</button>
             </div>
         </div>
     </form>
 </div>
-<div id="placesSpinner" style="position: fixed; top: 50%; left: 50%"></div>
+<div id="placeProblemsSpinner"/>
 
-<script type="text/javascript">
-    $(function () {
-        var scriptTag = document.createElement("script");
-        scriptTag.src = "/Scripts/view/PlaceProblems.js";
-        document.head.appendChild(scriptTag);
-    });
-</script>
+<script type="text/javascript">require(['main'], function (main) { require(['placeProblemsController']); });</script>
 
-@*<script type="text/javascript" src="~/Scripts/view/PlaceProblems.js"></script>*@
+
+
+
