--- a/Web.UI/Views/Research/Retrieve.cshtml
+++ b/Web.UI/Views/Research/Retrieve.cshtml
@@ -24,7 +24,7 @@
         <div class="form-group">
             <label for="retrieveGeneration" class="col-sm-2 control-label">Generations:</label>
             <div class="col-sm-4">
-                <div class="input-group">
+                <div class="input-group addChildren-box">
                     <div id="retrieveGenerationDiv"></div>
                 </div>
             </div>
