--- a/Web.UI/Views/Research/FindPerson.cshtml
+++ b/Web.UI/Views/Research/FindPerson.cshtml
@@ -79,7 +79,7 @@
         <thead>
         <tr>
             <th data-field="state" data-checkbox="true"></th>
-            <th data-field="name" data-formatter="nameFormatter" data-events="nameEvents">Name</th>
+            <th data-field="name" data-formatter="nameFormatter" data-events="nameEvents" class="name-colom">Name</th>
             <th data-field="events" data-formatter="eventsFormatter">Events</th>
             <th data-field="parents" data-formatter="parentsFormatter">Parents</th>
             <th data-field="spouse" data-formatter="spouseFormatter">Spouse</th>
