fixed bugs and changes for razure host

--- a/Web.UI/Views/Research/FindClues.cshtml
+++ b/Web.UI/Views/Research/FindClues.cshtml
@@ -35,13 +35,13 @@
         </div>
         <hr>
         <div class="form-group">
-            <label for="findCluesSearchCriteria" class="col-sm-2 control-label">Criteria:<span class="fa fmf16-Help" rel="criteriaTooltip" title="Anyone of these or all can be used to determine if an ancestor meets a certain criteria"></span></label>
+            <label for="findCluesSearchCriteria" class="col-sm-2 control-label">Criteria:<span class="fa fmf-help16" rel="criteriaTooltip" title="Anyone of these or all can be used to determine if an ancestor meets a certain criteria"></span></label>
             <div class="col-sm-10">
                 <select class="form-control" id="findCluesSearchCriteria"></select>
             </div>
         </div>
         <div class="form-group">
-            <label for="findCluesGapInChildren" class="col-sm-2 control-label">Child Gap:<span class="fa fmf16-Help" rel="gapTooltip" title="Gap is used when checking if the gap in years between children is to long"></span></label>
+            <label for="findCluesGapInChildren" class="col-sm-2 control-label">Child Gap:<span class="fa fmf-help16" rel="gapTooltip" title="Gap is used when checking if the gap in years between children is to long"></span></label>
             <div class="col-sm-10">
                 <select class="form-control select2Digit" id="findCluesGapInChildren">
                     <option selected>3</option>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="findCluesAgeLimit" class="col-sm-2 control-label">Age Limit:<span class="fa fmf16-Help" rel="ageTooltip" title="Age limit is used when determining if they lived long enough to be married or have children"></span></label>
+            <label for="findCluesAgeLimit" class="col-sm-2 control-label">Age Limit:<span class="fa fmf-help16" rel="ageTooltip" title="Age limit is used when determining if they lived long enough to be married or have children"></span></label>
             <div class="col-sm-10">
                 <select class="form-control select2Digit" id="findCluesAgeLimit">
                     <option selected>18</option>
