--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -133,6 +133,15 @@
                         <p>Refresh web page and clear local storage</p>
                     </div>
                 </div>
+                <div class="col-md-4">
+                    <div class="promo-box">
+                        <a id="feedback" href="#">
+                            <span class="fa fmf-reset64"></span>
+                            <strong>Feedback</strong>
+                        </a>
+                        <p>Refresh web page and clear local storage</p>
+                    </div>
+                </div>
 
             </div>
 
