Fix dialog report layout and minor UI changes to find person dilog.  Set the old .ico file back

--- a/Web.UI/Content/css/dialog.css
+++ b/Web.UI/Content/css/dialog.css
@@ -225,14 +225,13 @@ hr {
     margin-bottom: 0px;
 }
 
-.startingPoint-table {
+.report-table {
     margin-top: -1.4em;
     height: 423px;
 }
 
-.findClues-table {
-    margin-top: -1.4em;
-    height: 423px;
+.no-records-found {
+    visibility: hidden !important;
 }
 
 /*Rounded and Circle Classes
