--- a/Web.UI/Views/Research/DateProblemsReport.cshtml
+++ b/Web.UI/Views/Research/DateProblemsReport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class ="dateProblems-table">
+﻿<div class ="report-table">
     <table id="dateProblemsReportTable"
            data-toggle="table"
            data-height="800"
