--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -1,4 +1,4 @@
-<div class ="findClues-table">
+<div class ="report-table">
     <table id="findCluesReportTable"
            data-toggle="table"
            data-height="800"
