--- a/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
+++ b/Web.UI/Views/Research/IncompleteOrdinancesReport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class ="incompleteOrdinances-table">
+﻿<div class ="report-table">
     <table id="incompleteOrdinancesReportTable"
            data-toggle="table"
            data-height="800"
