--- a/Web.UI/Views/Research/PlaceProblemsReport.cshtml
+++ b/Web.UI/Views/Research/PlaceProblemsReport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class ="incompleteOrdinances-table">
+﻿<div class ="report-table">
     <table id="placeProblemsReportTable"
            data-toggle="table"
            data-height="800"
