--- a/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
+++ b/Web.UI/Views/Research/PossibleDuplicatesReport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class ="possibleDuplicates-table">
+﻿<div class ="report-table">
     <table id="possibleDuplicatesReportTable"
            data-toggle="table"
            data-height="800"
