--- a/Web.UI/Views/Research/StartingPointReport.cshtml
+++ b/Web.UI/Views/Research/StartingPointReport.cshtml
@@ -1,4 +1,4 @@
-﻿<div class ="startingPoint-table">
+﻿<div class ="report-table">
     <table id="startingPointReportTable"
            data-toggle="table"
            data-height="800"
