--- a/Web.UI/Views/Home/Index.cshtml
+++ b/Web.UI/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 <div class="tp-banner-container">
 
     <div id="layerslider" style="width: 1281px; height: 547px !important; max-width: 1281px;">
-        <div class="ls-slide fmf-bg2" style="width: 117px !important" data-ls="slidedelay:5500;transition2d:11;">
+        <div class="ls-slide fmf-bg2" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:11;">
             <img class="ls-l" style="top: 57%; left: 69%; width: 525.5px; height: 605px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:300;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/findmyfamilies_new1-2.png" alt="">
@@ -27,7 +27,7 @@
             </div>
 
         </div>
-        <div class="ls-slide fmf-bg5" data-ls="slidedelay:5500;transition2d:11;">
+        <div class="ls-slide fmf-bg5" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:11;" >
             <img class="ls-l" style="top: 46%; left: 74%; width: 650px; height: 390px; white-space: nowrap;"
                  data-ls="offsetxin:900;offsetyin:25;durationin:4000;delayin:390;easingin:easeOutQuart;fadein:false;offsetxout:2400;offsetyout:-400;durationout:1000;easingout:easeInQuart;fadeout:false;scalexout:0.9;scaleyout:0.9;"
                  src="/Images/Computer2.png" alt="">
@@ -43,11 +43,11 @@
             <div class="ls-l" style="top:241px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:2500;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
             <div class="ls-l" style="top:296px;left:80px; line-height: 22px;" data-ls="offsetxin:-100;easingin:easeOutBack;fadein:false;scalexin:0.1;scaleyin:0.1;offsetxout:-100;durationout:750;delayin:3000;fadeout:false;scalexout:0.1;scaleyout:0.1;"><i class="fa fa-chevron-circle-right" style="color: #fff; font-size: 24px"></i></div>
             <div class="ls-l" style="top: 394px; left: 175px; position: absolute;"
-                data-ls="offsetxin:-50;durationin:2000;delayin:3000;offsetxout:-50;durationout:1000;">
+                 data-ls="offsetxin:-50;durationin:2000;delayin:3000;offsetxout:-50;durationout:1000;">
                 <a class="btn-u btn-u-blue btn-u-lg" href="@Url.Action("SearchAncestry", "Home")"><i class="fa color-light fa-wrench"></i><span style="color: floralwhite;">  Take it for a Spin</span></a>
             </div>
         </div>
-        <div class="ls-slide fmf-img1" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
+        <div class="ls-slide fmf-img1" style="height: 500px !important" data-ls="slidedelay:5500;transition2d:21,105;timeshift:-1000;">
 
             <div class="ls-l" style="top: 60px; left: 50%; background: white; background: rgba(255, 255, 255, .2); box-shadow: 0px 5px 70px -20px black; width: 660px; height: 380px; white-space: nowrap;" data-ls="offsetxin:0;durationin:2000;delayin:1500;easingin:easeInOutExpo;rotatexin:20;scalexin:0.8;scaleyin:0.8;transformoriginin:50% 50% -150;offsetxout:0;durationout:1000;rotatexout:-20;scalexout:0.8;scaleyout:0.8;transformoriginout:50% 50% -150;">
             </div>
