Renamed the Research Family utility to find person, since that is really what it is.

--- a/Web.UI/Views/Research/Research.cshtml
+++ b/Web.UI/Views/Research/Research.cshtml
@@ -26,11 +26,11 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="promo-box">
-                        <a id="researchFamily" href="#">
+                        <a id="findPerson" href="#">
                             <span class="fa fmf-family64"></span>
-                            <strong>Research Family</strong>
+                            <strong>Find Person</strong>
                         </a>
-                        <p>This utility provides useful links to popular family history web sites (Ancestry, FindAGrave, MyHeritage, etc.) for research</p>
+                        <p>This utility provides a valuable find person utility that provides links to popular family history web sites (Ancestry, FindAGrave, MyHeritage, Puzilla, etc.) for research</p>
                     </div>
 
                 </div>
