Fixed spinner issues and moved the bootstraptable css from researchhelper to the report .cshtml files

--- a/Web.UI/Views/Research/DateProblemsReport.cshtml
+++ b/Web.UI/Views/Research/DateProblemsReport.cshtml
@@ -1,4 +1,5 @@
-﻿<div class ="report-table">
+﻿<link rel="stylesheet" href="~/Content/css/lib/research/bootstrap-table.min.css">
+<div class ="report-table">
     <table id="dateProblemsReportTable"
            data-toggle="table"
            data-height="800"
