--- a/Web.UI/Views/Research/FindCluesReport.cshtml
+++ b/Web.UI/Views/Research/FindCluesReport.cshtml
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="~/Content/css/lib/research/bootstrap-table.min.css">
 <div class ="report-table">
     <table id="findCluesReportTable"
            data-toggle="table"
